2004-01-21  Dominique Devriese  <devriese@kde.org>

	* replace my own autoconf code in configure.in.in for checking for
	boost.python and python by some macro's by Ben Burton which
	additionally check whether the python and boost.python combination
	found is sane.  They're also generally cleaner and such.

	* clean up configure.in.bot a bit

2004-01-20  Dominique Devriese  <devriese@kde.org>

	* Add a new internal "Segment Axis" type, implemented as a macro.

2004-01-18  Dominique Devriese  <devriese@kde.org>

	* bump the version number to 0.7.1

2003-12-16  Dominique Devriese  <devriese@kde.org>

	* Fix the scrolling for horizontal scrolling using the alt button
	or a horizontal scroll wheel.

2003-12-15  Dominique Devriese  <devriese@kde.org>

	* Another try at fixing the ArgsParser parsing order.  I think
	I've tried most problematic cases, and they all seem to work
	properly.  Let's pray for the best ;)

2003-12-10  Dominique Devriese  <devriese@kde.org>

	* Fix a crash when using a macro having the moving point of a
	locus as its argument, reported by Marco Zoso.

2003-11-14  Dominique Devriese  <devriese@kde.org>

	* Fix two crashes in TextLabelRedefineMode.

2003-11-10  Dominique Devriese  <devriese@kde.org>

	* bump the version number to 0.6.1

	* Fix bugs #67671 and #67694

2003-10-22  Dominique Devriese  <devriese@kde.org>

	* Improve the errors given by the "New Script Wizard", by making
	it get a proper error description from the python interpreter.
	
	* fix the ArgsParser parsing order, properly this time..

2003-10-20  Dominique Devriese  <devriese@kde.org>

	* Work on the Cabri import filter, so that it actually becomes
	usable for some easier files..

	* Improve the errors given by the "New Script Wizard", by making
	it get a proper error description from the python interpreter.

2003-10-09  Dominique Devriese  <devriese@kde.org>

	* Add a lot of documentation to the new classes.

	* Fix the moving system again, it now only redraws exactly those